[package]
name = "apollo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "signal", "rt-multi-thread"] }